--- a/index.html
+++ b/index.html
@@ -1,3 +1,59 @@
-<html>
-  <p>Portfolio</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Basic SEO meta tags -->
+  <meta name="description"
+    content="A Chrome Extension Icon Generator for generating all the required icon sizes easily." />
+  <meta name="keywords" content="Chrome Extension Icon Generator, Chrome extension, icon generator, icon" />
+  <meta name="author" content="Alex Leybourne" />
+
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="Chrome Extension Icon Generator" />
+  <meta property="og:description"
+    content="A Chrome Extension Icon Generator for generating all the required icon sizes easily." />
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/alexleybourne/chrome-extension-icon-creator/main/images/meta-image.jpg" />
+  <meta property="og:url" content="https://alexleybourne.github.io/chrome-extension-icon-creator/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Chrome Extension Icon Generator" />
+  <meta name="twitter:description"
+    content="A Chrome Extension Icon Generator for generating all the required icon sizes easily." />
+  <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/alexleybourne/chrome-extension-icon-creator/main/images/meta-image.jpg" />
+</head>
+
+<body>
+  <h1>Welcome to Karan's Digital Playground! 🎮</h1>
+  <p>🚀 Mission Statement: To make the digital world a little more fun, one line of code at a time. No bugs were harmed
+    in the making of this page (well, maybe a couple).</p>
+
+  <ul>
+    <h2>What I Do:</h2>
+    <li>Mobile Apps: I build apps that run smoother than your favorite playlist.</li>
+    <li>Desktop Software: Tools so good, you'll wonder how you ever lived without them.</li>
+    <li>Websites: Websites that load faster than your morning coffee kicks in.</li>
+  </ul>
+
+  <ul>
+    <h2>Fun Facts About Me:</h2>
+    <li>My code is so clean, even my debugger is jealous.</li>
+    <li>I treat bugs like unwanted houseguests: they get kicked out immediately.</li>
+    <li>I once fixed a bug... then spent 3 hours debugging the debug (it was a good learning experience).</li>
+  </ul>
+
+  <h2>Let's Work Together:</h2>
+  <p>Need an app, software, or website that's as fun as it is functional? Hit me up, and let's build something awesome!
+    If we can't figure it out, I'll gladly offer a virtual high five and a terrible pun for your troubles.</p>
+</body>
+
 </html>
+
+
+<!-- For SEO tricks see the code and coding style https://github.com/alexleybourne/chrome-extension-icon-generator/blob/main/index.html -->
