add content and style page

--- a/index.html
+++ b/index.html
@@ -4,31 +4,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description"
+    content="Karan's Digital Playground - Mobile Apps, Desktop Software, and Websites that are fun and functional.">
+  <meta name="keywords" content="Karan, Developer, Mobile Apps, Desktop Software, Websites, Programming, Coding">
+  <meta name="author" content="Karan">
+  <title>Karan's Digital Playground</title>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #ff6f61;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    li {
+      font-size: 1.1rem;
+      background-color: #f8f9fa;
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      color: #007bff;
+      margin-top: 20px;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    .contact {
+      margin-top: 20px;
+      font-size: 1.2rem;
+    }
+
+    .contact a {
+      color: #007bff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Welcome to Karan's Digital Playground! 🎮</h1>
-  <p>🚀 Mission Statement: To make the digital world a little more fun, one line of code at a time. No bugs were harmed
-    in the making of this page (well, maybe a couple).</p>
+  <div class="container">
+    <h1>Welcome to Karan's Digital Playground! 🎮</h1>
+    <p>🚀 Mission Statement: To make the digital world a little more fun, one line of code at a time. No bugs were
+      harmed
+      in the making of this page (well, maybe a couple).</p>
 
-  <ul>
-    <h2>What I Do:</h2>
-    <li>Mobile Apps: I build apps that run smoother than your favorite playlist.</li>
-    <li>Desktop Software: Tools so good, you'll wonder how you ever lived without them.</li>
-    <li>Websites: Websites that load faster than your morning coffee kicks in.</li>
-  </ul>
+    <ul>
+      <h2>What I Do:</h2>
+      <li>Mobile Apps: I build apps that run smoother than your favorite playlist.</li>
+      <li>Desktop Software: Tools so good, you'll wonder how you ever lived without them.</li>
+      <li>Websites: Websites that load faster than your morning coffee kicks in.</li>
+    </ul>
 
-  <ul>
-    <h2>Fun Facts About Me:</h2>
-    <li>My code is so clean, even my debugger is jealous.</li>
-    <li>I treat bugs like unwanted houseguests: they get kicked out immediately.</li>
-    <li>I once fixed a bug... then spent 3 hours debugging the debug (it was a good learning experience).</li>
-  </ul>
+    <ul>
+      <h2>Fun Facts About Me:</h2>
+      <li>My code is so clean, even my debugger is jealous.</li>
+      <li>I treat bugs like unwanted houseguests: they get kicked out immediately.</li>
+      <li>I once fixed a bug... then spent 3 hours debugging the debug (it was a good learning experience).</li>
+    </ul>
 
-  <h2>Let's Work Together:</h2>
-  <p>Need an app, software, or website that's as fun as it is functional? Hit me up, and let's build something awesome!
-    If we can't figure it out, I'll gladly offer a virtual high five and a terrible pun for your troubles.</p>
+    <h2>Let's Work Together:</h2>
+    <p>Need an app, software, or website that's as fun as it is functional? Hit me up, and let's build something
+      awesome!
+      If we can't figure it out, I'll gladly offer a virtual high five and a terrible pun for your troubles.</p>
+
+    <p class="contact">📧 Contact me: <a href="mailto:debugwithkaran@gmail.com">debugwithkaran@gmail.com</a></p>
+  </div>
 </body>
 
 </html>
